PCQ-1651 address code smells